--- a/.github/workflows/Build-I18N-Json.yml
+++ b/.github/workflows/Build-I18N-Json.yml
@@ -40,8 +40,8 @@ jobs:
         working-directory: ${{ github.workspace }}/vrelnir_localization
         run: pip install -r requirements.txt
       - name: 运行 Python 生成 i18n.json (在 data/json/i18n.json)
-        working-directory: ${{ github.workspace }}
-        run: python ${{ github.workspace }}/vrelnir_localization/build.py
+        working-directory: ${{ github.workspace }}/vrelnir_localization
+        run: python ./build.py
       - name: 上传 i18n.json
         uses: actions/upload-artifact@v3
         with:
