--- a/.github/workflows/Build-I18N-Json.yml
+++ b/.github/workflows/Build-I18N-Json.yml
@@ -25,32 +25,39 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.head_ref }}
           submodules: true
+
       - uses: snow-actions/git-config-user@v1.0.0
         with:
           name: "MoonBell"
           email: "number_sir@126.com"
+
       - name: 拉取子模块
         working-directory: ${{ github.workspace }}/vrelnir_localization
         run: git submodule update --init --recursive
+
       - name: 安装 Python
         uses: actions/setup-python@v4.7.0
         with:
           python-version: '3.10.11'
           cache: 'pip'
+
       - name: 安装 Python 所需库
         working-directory: ${{ github.workspace }}/vrelnir_localization
         run: pip install -r requirements.txt
+
       - name: 运行 Python 生成 i18n.json (在 data/json/i18n.json)
         working-directory: ${{ github.workspace }}/vrelnir_localization
         run: python ./build.py
-      - name: 上传 i18n.json
-        uses: actions/upload-artifact@v3
-        with:
-          name: i18n-${{ github.sha }}
-          path: ${{ github.workspace }}/vrelnir_localization/data/json/i18n.json
+
+      # - name: 上传 i18n.json
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: i18n-${{ github.sha }}
+      #     path: ${{ github.workspace }}/vrelnir_localization/data/json/i18n.json
 
 
       # [i18n mod] =========================================
+
 
       - name: Use Node.js
         uses: actions/setup-node@v3
@@ -101,3 +108,10 @@ jobs:
         with:
           name: I18nMod-${{ github.sha }}
           path: ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip
+          name: i18n-${{ github.sha }}
