--- a/.github/workflows/Build-I18N-Json.yml
+++ b/.github/workflows/Build-I18N-Json.yml
@@ -8,6 +8,9 @@ on:
     - cron: "0 0 * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 env:
   GIT_REPO: ${{secrets.GIT_REPO}}
   PARATRANZ_TOKEN: ${{secrets.PARATRANZ_TOKEN}}
@@ -111,6 +114,8 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
       #  if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           files: ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip
           name: Release i18n-${{ github.sha }}
