--- a/.github/workflows/Build-I18N-Json.yml
+++ b/.github/workflows/Build-I18N-Json.yml
@@ -95,12 +95,12 @@ jobs:
         run: cp "${{ github.workspace }}/vrelnir_localization/data/json/i18n.json" "${{ github.workspace }}/ModLoader/mod/i18n/i18n.json"
 
       - name: change mod version in boot.json on scheduled task
-        if: ${{ github.event_name }} == 'schedule'
+        if: ${{ github.event_name == 'schedule' }}
         working-directory: ${{ github.workspace }}
         run: node "${{ github.workspace }}/change_mod_version.js" "${{ github.workspace }}/ModLoader/mod/i18n/boot.json" "${{ env.CHINESE_VERSION }}" "${{ steps.game_version.outputs.version }}"
 
       - name: change mod version in boot.json on manual task
-        if: ${{ github.event_name }} == 'workflow_dispatch'
+        if: ${{ github.event_name == 'workflow_dispatch' }}
         working-directory: ${{ github.workspace }}
         run: node "${{ github.workspace }}/change_mod_version.js" "${{ github.workspace }}/ModLoader/mod/i18n/boot.json" "${{ github.event.inputs.chinese_version }}" "${{ steps.game_version.outputs.version }}"
 
@@ -116,19 +116,19 @@ jobs:
 
       - name: Release Auto-build Nightly
         uses: softprops/action-gh-release@v1
-        if: ${{ github.event_name }} == 'schedule'
+        if: ${{ github.event_name == 'schedule' }}
         with:
           files: ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip
           name: Auto Release nightly v${{ steps.game_version.outputs.version }}-chs-${{ env.CHINESE_VERSION }}-auto-${{ steps.date.outputs.date }}
-          tag_name: ${{ steps.game_version.outputs.version }}-chs-${{ env.CHINESE_VERSION }}-auto-${{ steps.date.outputs.date }}
+          tag_name: ${{ steps.game_version.outputs.version }}-chs-${{ env.CHINESE_VERSION }}-auto-${{ steps.date.outputs.date }}-${{ github.sha }}
           body: Scheduled task on ${{ steps.date.outputs.date }}
           prerelease: true
 
       - name: Release Manually build
         uses: softprops/action-gh-release@v1
-        if: ${{ github.event_name }} == 'workflow_dispatch'
+        if: ${{ github.event_name == 'workflow_dispatch' }}
         with:
           files: ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip
           name: Release v${{ steps.game_version.outputs.version }}-chs-${{ github.event.inputs.chinese_version }}
-          tag_name: ${{ steps.game_version.outputs.version }}-chs-${{ github.event.inputs.chinese_version }}
+          tag_name: ${{ steps.game_version.outputs.version }}-chs-${{ github.event.inputs.chinese_version }}-${{ github.sha }}
           body: release v${{ steps.game_version.outputs.version }}-chs-${{ github.event.inputs.chinese_version }}
