--- a/.github/workflows/Build-I18N-Json.yml
+++ b/.github/workflows/Build-I18N-Json.yml
@@ -56,7 +56,7 @@ jobs:
         id: game_version
         run: |
           version=`cat ${{ github.workspace }}/vrelnir_localization/degrees-of-lewdity-master/version`
-          echo "::set-output name=version::version"
+          echo "::set-output name=version::$version"
 
       - name: Use Node.js
         uses: actions/setup-node@v3
