对应i18n的变更

--- a/.github/workflows/Build-I18N-Json.yml
+++ b/.github/workflows/Build-I18N-Json.yml
@@ -85,6 +85,7 @@ jobs:
         run: |
           yarn install
           yarn run ts:build
+          yarn run build:webpack
 
       - name: Copy img (Win)
         if: runner.os == 'Windows'
