--- a/.github/workflows/Build-I18N-Json.yml
+++ b/.github/workflows/Build-I18N-Json.yml
@@ -34,6 +34,7 @@ jobs:
           ref: ${{ github.head_ref }}
           submodules: true
 
+      ##### SOURCE CODE & PYTHON #####
       - name: Fetch game source code
         working-directory: ${{ github.workspace }}/vrelnir_localization
         run: git submodule update --init --recursive
@@ -58,6 +59,7 @@ jobs:
           version=`cat ${{ github.workspace }}/vrelnir_localization/degrees-of-lewdity-master/version`
           echo "::set-output name=version::$version"
 
+      ##### MOD LOADER & NODEJS #####
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
@@ -108,6 +110,31 @@ jobs:
       - name: Build i18n Mod
         working-directory: ${{ github.workspace }}/ModLoader/mod/i18n
         run: node "${{ github.workspace }}/ModLoader/dist-insertTools/packModZip.js" "boot.json"
+
+      ##### ENCRYPT #####
+      - name: Simple Crypt Wrapper Mod
+        uses: actions/checkout@v4
+        with:
+          repository: Lyoko-Jeremie/SimpleCryptWrapperMod
+          path: SimpleCryptWrapperMod
+          ref: master
+          submodules: recursive
+
+      - name: Build CryptWrapper
+        working-directory: ${{ github.workspace }}/SimpleCryptWrapperMod
+        run: |
+          yarn install
+          yarn run build:ts
+          yarn run build:webpack
+          yarn run webpack:tools
+
+      - name: Encrypt i18n Mod
+        working-directory: ${{ github.workspace }}/ModLoader/mod/i18n
+        run: |
+          echo "密码: dol-chs" >> "${{ github.workspace }}/SimpleCryptWrapperMod/passwordHint.txt"
+          echo '{"modName":"ModI18N","password":"dol-chs","passwordHintFile":"passwordHint.txt"}' >> "${{ github.workspace }}/SimpleCryptWrapperMod/cryptModConfig.json"
+          echo '{"name": "dol-chs-shell","version": "1.0.0","styleFileList": [],"scriptFileList_earlyload": ["earlyload.js"],"scriptFileList_inject_early": ["SimpleCryptWrapper.js"],"scriptFileList_preload": [],"scriptFileList": [],"tweeFileList": [],"imgFileList": [],"imgFileReplaceList": [],"additionFile": [],"additionBinaryFile": [],"addonPlugin": [],"dependenceInfo": [{"modName": "ModLoader","version": "^2.5.1"},{"modName": "SweetAlert2Mod","version": "^1.0.0"}]}' >> "${{ github.workspace }}/SimpleCryptWrapperMod/bootTemplate.json"
+          node "${{ github.workspace }}/SimpleCryptWrapperMod/dist-tools/encryptTool.js" "${{ github.workspace }}/ModLoader/dist-insertTools/packModZip.js" "${{ github.workspace }}/SimpleCryptWrapperMod/cryptModConfig.json" "${{ github.workspace }}/SimpleCryptWrapperMod/bootTemplate.json" "${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip"
 
       - name: Upload i18n Mod
         uses: actions/upload-artifact@v3
