--- a/.github/workflows/Build-I18N-Json.yml
+++ b/.github/workflows/Build-I18N-Json.yml
@@ -133,24 +133,24 @@ jobs:
           yarn run webpack:tools
 
       - name: Encrypt i18n Mod
-        working-directory: ${{ github.workspace }}/ModLoader/mod/i18n
+        working-directory: ${{ github.workspace }}/ModLoader/mod/SimpleCryptWrapperMod/dist-tools
         run: |
-          echo "密码: dol-chs" >> "${{ github.workspace }}/ModLoader/mod/SimpleCryptWrapperMod/dist-tools/passwordHint.txt"
-          echo '{"modName":"ModI18N","password":"dol-chs","passwordHintFile":"${{ github.workspace }}/ModLoader/mod/SimpleCryptWrapperMod/dist-tools/passwordHint.txt"}' >> "${{ github.workspace }}/ModLoader/mod/SimpleCryptWrapperMod/dist-tools/cryptModConfig.json"
-          echo '{"name": "dol-chs-shell","version": "1.0.0","styleFileList": [],"scriptFileList_earlyload": ["earlyload.js"],"scriptFileList_inject_early": ["SimpleCryptWrapper.js"],"scriptFileList_preload": [],"scriptFileList": [],"tweeFileList": [],"imgFileList": [],"imgFileReplaceList": [],"additionFile": [],"additionBinaryFile": [],"addonPlugin": [],"dependenceInfo": [{"modName": "ModLoader","version": "^2.5.1"},{"modName": "SweetAlert2Mod","version": "^1.0.0"}]}' >> "${{ github.workspace }}/ModLoader/mod/SimpleCryptWrapperMod/dist-tools/bootTemplate.json"
-          node "${{ github.workspace }}/ModLoader/mod/SimpleCryptWrapperMod/dist-tools/encryptTool.js" "${{ github.workspace }}/ModLoader/dist-insertTools/packModZip.js" "${{ github.workspace }}/ModLoader/mod/SimpleCryptWrapperMod/dist-tools/cryptModConfig.json" "${{ github.workspace }}/ModLoader/mod/SimpleCryptWrapperMod/dist-tools/bootTemplate.json" "${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip"
+          echo "密码: dol-chs" >> "passwordHint.txt"
+          echo '{"modName":"ModI18N","password":"dol-chs","passwordHintFile":"${{ github.workspace }}/ModLoader/mod/SimpleCryptWrapperMod/dist-tools/passwordHint.txt"}' >> "cryptModConfig.json"
+          echo '{"name": "dol-chs-shell","version": "1.0.0","styleFileList": [],"scriptFileList_earlyload": ["earlyload.js"],"scriptFileList_inject_early": ["SimpleCryptWrapper.js"],"scriptFileList_preload": [],"scriptFileList": [],"tweeFileList": [],"imgFileList": [],"imgFileReplaceList": [],"additionFile": [],"additionBinaryFile": [],"addonPlugin": [],"dependenceInfo": [{"modName": "ModLoader","version": "^2.5.1"},{"modName": "SweetAlert2Mod","version": "^1.0.0"}]}' >> "bootTemplate.json"
+          node "encryptTool.js" "${{ github.workspace }}/ModLoader/dist-insertTools/packModZip.js" "cryptModConfig.json" "bootTemplate.json" "${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip"
 
       - name: Upload i18n Mod
         uses: actions/upload-artifact@v3
         with:
           name: I18nMod-${{ github.sha }}
-          path: ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip
+          path: ${{ github.workspace }}/ModLoader/mod/SimpleCryptWrapperMod/dist-tools/ModI18N.mod.zip
 
       - name: Release i18n Mod (Nightly)
         uses: softprops/action-gh-release@v1
         if: ${{ github.event_name == 'schedule' }}
         with:
-          files: ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip
+          files: ${{ github.workspace }}/ModLoader/mod/SimpleCryptWrapperMod/dist-tools/ModI18N.mod.zip
           name: Auto Release nightly v${{ steps.game_version.outputs.version }}-chs-${{ env.CHINESE_VERSION }}-auto-${{ steps.date.outputs.date }}
           tag_name: ${{ steps.game_version.outputs.version }}-chs-${{ env.CHINESE_VERSION }}-auto-${{ steps.date.outputs.date }}-${{ github.sha }}
           body: Scheduled task on ${{ steps.date.outputs.date }}
@@ -160,7 +160,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: ${{ github.event_name == 'workflow_dispatch' }}
         with:
-          files: ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip
+          files: ${{ github.workspace }}/ModLoader/mod/SimpleCryptWrapperMod/dist-tools/ModI18N.mod.zip
           name: Release v${{ steps.game_version.outputs.version }}-chs-${{ github.event.inputs.chinese_version }}
           tag_name: ${{ steps.game_version.outputs.version }}-chs-${{ github.event.inputs.chinese_version }}-${{ github.sha }}
           body: release v${{ steps.game_version.outputs.version }}-chs-${{ github.event.inputs.chinese_version }}
