在包名中加入版本号

--- a/.github/workflows/Build-I18N-Json.yml
+++ b/.github/workflows/Build-I18N-Json.yml
@@ -149,23 +149,33 @@ jobs:
           name: I18nMod-${{ github.sha }}
           path: ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip
 #          path: ${{ github.workspace }}/ModLoader/mod/SimpleCryptWrapperMod/out/ModI18N.mod.zip
+      
+      - name: Rename i18n Mod (Nightly)
+        if: ${{ github.event_name == 'schedule' }}
+        run: |
+          mv ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N-chs-${{ env.CHINESE_VERSION }}.mod.zip
 
       - name: Release i18n Mod (Nightly)
         uses: softprops/action-gh-release@v1
         if: ${{ github.event_name == 'schedule' }}
         with:
-          files: ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip
+          files: ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N-chs-${{ env.CHINESE_VERSION }}.mod.zip
 #          files: ${{ github.workspace }}/ModLoader/mod/SimpleCryptWrapperMod/out/ModI18N.mod.zip
           name: Auto Release nightly v${{ steps.game_version.outputs.version }}-chs-${{ env.CHINESE_VERSION }}-auto-${{ steps.date.outputs.date }}
           tag_name: ${{ steps.game_version.outputs.version }}-chs-${{ env.CHINESE_VERSION }}-auto-${{ steps.date.outputs.date }}-${{ github.sha }}
           body: Scheduled task on ${{ steps.date.outputs.date }}
           prerelease: true
 
+      - name: Rename i18n Mod (Manually)
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        run: |
+          mv ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N-chs-${{ github.event.inputs.chinese_version }}.mod.zip
+
       - name: Release i18n Mod (Manually)
         uses: softprops/action-gh-release@v1
         if: ${{ github.event_name == 'workflow_dispatch' }}
         with:
-          files: ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N.mod.zip
+          files: ${{ github.workspace }}/ModLoader/mod/i18n/ModI18N-chs-${{ github.event.inputs.chinese_version }}.mod.zip
 #          files: ${{ github.workspace }}/ModLoader/mod/SimpleCryptWrapperMod/out/ModI18N.mod.zip
           name: Release v${{ steps.game_version.outputs.version }}-chs-${{ github.event.inputs.chinese_version }}
           tag_name: ${{ steps.game_version.outputs.version }}-chs-${{ github.event.inputs.chinese_version }}-${{ github.sha }}
