--- a/.github/workflows/Build-I18N-Json.yml
+++ b/.github/workflows/Build-I18N-Json.yml
@@ -69,6 +69,9 @@ jobs:
         with:
           node-version: 18.x
 
+      - name: Corepack Enable
+        run: corepack enable
+
       - name: ModLoader
         uses: actions/checkout@v4
         with:
@@ -85,6 +88,7 @@ jobs:
           yarn run webpack:BeforeSC2
           yarn run ts:ForSC2
           yarn run webpack:insertTools
+          yarn run tras:babel
 
       - name: Build i18n
         working-directory: ${{ github.workspace }}/ModLoader/mod/i18n
