--- a/.github/ISSUE_TEMPLATE/miss_report.yaml
+++ b/.github/ISSUE_TEMPLATE/miss_report.yaml
@@ -1,8 +1,11 @@
 name: 脚本漏抓反馈
+
 description: 漏抓内容的详细信息
+
 labels: ['miss']
+
 body:
-  - type: textarea
+  - type: input
     id: filepath
     attributes:
       label: 文件位置
