--- a/.github/workflows/Build-I18N-Json.yml
+++ b/.github/workflows/Build-I18N-Json.yml
@@ -43,19 +43,16 @@ jobs:
           ref: main
           submodules: recursive
 
-      - name: Python installation
-        uses: actions/setup-python@v4.7.0
-        with:
-          python-version: '3.10.11'
-          cache: 'pip'
+      - name: Install UV  # https://docs.astral.sh/uv/#installation
+        run: powershell -ExecutionPolicy ByPass -c "irm https://astral.sh/uv/install.ps1 | iex"
 
-      - name: Python libs installation
-        working-directory: ${{ github.workspace }}/vrelnir_localization
-        run: pip install -r requirements.txt
+      - name: Initialize Project
+        run: uv sync
 
       - name: Generating i18n.json (in data/json/i18n.json)
         working-directory: ${{ github.workspace }}/vrelnir_localization
-        run: python ./build.py
+        run: |
+          uv run build.py
 
       - name: Get game version
         id: game_version
